<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btn_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/subscriptions_btn_settings_content_description"
        android:padding="@dimen/padding_10dp"
        android:src="@drawable/ic_baseline_menu_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_subscriptions_add_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/subscriptions_btn_new_content_description"
        android:padding="@dimen/padding_10dp"
        android:src="@drawable/ic_baseline_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subscriptions_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/subscriptions_tv_screen_title"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/text_size_35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_menu" />

    <LinearLayout
        android:id="@+id/ll_subscriptions_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subscriptions_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:textColor="?android:textColorPrimary"
            android:text="@string/subscriptions_ll_not_found_tv_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/subscriptions_ll_not_found_tv_description" />

        <Button
            android:id="@+id/btn_ll_subscriptions_not_found_add_new"
            android:layout_marginTop="@dimen/margin_5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/subscriptions_ll_not_found_btn_add_new_text"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_subscriptions_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:foregroundGravity="center_horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subscriptions_title" />

</androidx.constraintlayout.widget.ConstraintLayout>